PT-538: Fix vertical align

--- a/src/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_forms.sass
+++ b/src/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_forms.sass
@@ -312,9 +312,12 @@ label.form-control
   vertical-align: top
 .form-control.__checkbox .form-label
   vertical-align: bottom
+  padding-top: 3px
 .window .__required:after
-    content: " *"
-    color: #F14E4E
+  content: " *"
+  color: #F14E4E
+.window .form-group .btn
+  margin-top: -3px
 .form-control
   input
     position: absolute
